--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <title>Cowley Pottery {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    {% include 'includes/header_shop.html' %}
+    {% include 'includes/header.html' %}
 
     {% block content %}
     {% endblock %}
