add font, info-footer container and class

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,27 +1,65 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
-
 {% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    The new collections are here
-                </h1>
-                <div class="my-5">
-                    <h4>
-                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-                    </h4>
-                </div>
-            </div>
+<div class="container-fluid h-100">
+    <div class="row h-100">
+        <div class="col-12 col-md-4 my-auto">
+            <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
+        </div>
+        <div class="col-12 col-md-8 my-auto">
+            <h1>
+                Welcome to Cowley Pottery
+            </h1>
+            <p>
+                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
+                tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
+                the shop. You can also find out more about Helen's journey and craft on the About page.
+                <br>
+                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
+            </p>
+
         </div>
     </div>
+    <div class="row h-100">
+        <div class="col-12 col-md-8 my-auto">
+            <h2>
+                Visit the shop
+            </h2>
+            <p>
+                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
+                tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
+                the shop. You can also find out more about Helen's journey and craft on the About page.
+                <br>
+                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
+            </p>
+
+        </div>
+        <div class="col-12 col-md-4 my-auto">
+            <img class="img-fluid" src="/media/Stall.jpg" alt="Pottery examples">
+        </div>
+    </div>
+    <div class="row h-100 info-footer">
+        <div class="col-6 my-auto">
+            <h1>
+                Info
+            </h1>
+            <p>
+                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
+                tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
+                the shop. You can also find out more about Helen's journey and craft on the About page.
+                <br>
+                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
+            </p>
+
+        </div>
+        <div class="col-6 my-auto">
+            <p>
+                ifno
+                <br>
+                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
+            </p>
+        </div>
+    </div>
+</div>
 {% endblock %}
