--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Rampart+One&family=Varta:wght@300&display=swap');
+
 html {
     height: 100%;
 }
@@ -6,4 +8,8 @@ html {
     background:url(/media/landing_placeholder.jpg);
     background-position: center top;
     background-size: cover;
+}
+
+.info-footer{
+    background-color: darkslategray;
 }
