add bg colours to index page, change lay out and font

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,11 +3,11 @@
 
 {% block content %}
 <div class="container-fluid h-100">
-    <div class="row h-100">
-        <div class="col-12 col-md-4 my-auto">
+    <div class="row h-100 justify-content-center bg-white">
+        <!-- <div class="col-12 col-md-4 my-auto">
             <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
-        </div>
-        <div class="col-12 col-md-8 my-auto">
+        </div> -->
+        <div class="col-12 col-md-8 my-auto text-center">
             <h1>
                 Welcome to Cowley Pottery
             </h1>
@@ -22,7 +22,8 @@
         </div>
     </div>
     <div class="row h-100">
-        <div class="col-12 col-md-8 my-auto">
+        <div class="col-12 col-md-4 my-auto">
+            <img class="img-fluid" src="/media/homepage1.jpg" alt="Pottery examples">
             <h2>
                 Visit the shop
             </h2>
@@ -34,12 +35,46 @@
                 Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
             </p>
 
+        <!-- </div> -->
+        <!-- <div class="col-12 col-md-4 my-auto"> -->
+            
         </div>
         <div class="col-12 col-md-4 my-auto">
             <img class="img-fluid" src="/media/Stall.jpg" alt="Pottery examples">
+            <h2>
+                Visit the shop
+            </h2>
+            <p>
+                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
+                tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
+                the shop. You can also find out more about Helen's journey and craft on the About page.
+                <br>
+                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
+            </p>
+
+        <!-- </div> -->
+        <!-- <div class="col-12 col-md-4 my-auto"> -->
+            
+        </div>
+        <div class="col-12 col-md-4 my-auto">
+            <img class="img-fluid" src="/media/Stall.jpg" alt="Pottery examples">
+            <h2>
+                Visit the shop
+            </h2>
+            <p>
+                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
+                tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
+                the shop. You can also find out more about Helen's journey and craft on the About page.
+                <br>
+                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
+            </p>
+
+        <!-- </div> -->
+        <!-- <div class="col-12 col-md-4 my-auto"> -->
+            
         </div>
     </div>
-    <div class="row h-100 info-footer">
+    <div class="row h-100 bg-white">
         <div class="col-6 my-auto">
             <h1>
                 Info
