--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">Cowley Pottery</a>
+        <a class="navbar-brand" id="logo" href="{% url 'home' %}">Cowley Pottery</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0">
+            <ul class="navbar-nav mb-2 mb-lg-0 textblack">
                 <li class="nav-item my-auto">
                     <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                 </li>
