add padding, border-radius and sizing to index.html elements

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,7 @@
         <!-- <div class="col-12 col-md-4 my-auto">
             <img class="img-fluid rounded-3" src="/media/homepage1.jpg" alt="Pottery examples">
         </div> -->
-        <div class="col-12 col-md-8 my-auto text-center">
+        <div class="col-12 col-md-6 my-auto text-center">
             <h1>
                 Welcome to Cowley Pottery
             </h1>
@@ -21,61 +21,59 @@
 
         </div>
     </div>
-    <div class="row h-100">
-        <div class="col-12 col-md-4 my-auto">
-            <img class="img-fluid" src="/media/homepage1.jpg" alt="Pottery examples">
+    <div class="row h-100 justify-content-center px-2">
+        <div class="col-12 col-md-4 col-xxl-3 pt-2">
+            <img class="img-fluid rounded-3 tile-image" src="/media/homepage1.jpg" alt="Pottery examples">
+            <div class = "px-2">
             <h2>
-                Visit the shop
+                About 
             </h2>
             <p>
-                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
-                tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
-                the shop. You can also find out more about Helen's journey and craft on the About page.
+                Cowley Pottery is my passion project with all pieces made by my little hands in my little studio.
                 <br>
-                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
+                If you'd like to hear more about my story please click here
             </p>
+            </div>
 
         <!-- </div> -->
         <!-- <div class="col-12 col-md-4 my-auto"> -->
             
         </div>
-        <div class="col-12 col-md-4 my-auto">
-            <img class="img-fluid" src="/media/Stall.jpg" alt="Pottery examples">
+        <div class="col-12 col-md-4 col-xxl-3 pt-2">
+            <img class="img-fluid rounded-3 tile-image" src="/media/Stall.jpg" alt="Pottery examples">
+            <div class = "px-2">
             <h2>
                 Visit the shop
             </h2>
             <p>
                 Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
                 tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
-                the shop. You can also find out more about Helen's journey and craft on the About page.
+                the shop. 
                 <br>
                 Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
             </p>
-
+            </div>
         <!-- </div> -->
         <!-- <div class="col-12 col-md-4 my-auto"> -->
             
         </div>
-        <div class="col-12 col-md-4 my-auto">
-            <img class="img-fluid" src="/media/Stall.jpg" alt="Pottery examples">
+        <div class="col-12 col-md-4 col-xxl-3 pt-2">
+            <img class="img-fluid rounded-3 tile-image" src="/media/Stall.jpg" alt="Pottery examples">
+            <div class = "px-2">
             <h2>
-                Visit the shop
+                Commissions
             </h2>
             <p>
-                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
-                tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
-                the shop. You can also find out more about Helen's journey and craft on the About page.
-                <br>
-                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
+                I'm happy to create items that are personalised or follow you specifications. On this page you will find a form to enter you details and request and I will get back to you
             </p>
-
+            </div>
         <!-- </div> -->
         <!-- <div class="col-12 col-md-4 my-auto"> -->
             
         </div>
     </div>
-    <div class="row h-100 bg-white">
-        <div class="col-6 my-auto">
+    <div class="row h-100 justify-content-center bg-white">
+        <div class="col-12 col-md-4 my-auto px-2">
             <h1>
                 Info
             </h1>
@@ -88,7 +86,7 @@
             </p>
 
         </div>
-        <div class="col-6 my-auto">
+        <div class="col-12 col-md-4 my-auto px-2">
             <p>
                 ifno
                 <br>
