add new tile photos on index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="row h-100 justify-content-center px-2">
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
-            <img class="img-fluid rounded-3 tile-image" src="/media/homepage1.jpg" alt="Pottery examples">
+            <img class="img-fluid rounded-3 tile-image" src="/media/Stall.jpg" alt="Pottery examples">
             <div class = "px-2">
             <h2>
                 About 
@@ -40,7 +40,7 @@
             
         </div>
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
-            <img class="img-fluid rounded-3 tile-image" src="/media/Stall.jpg" alt="Pottery examples">
+            <img class="img-fluid rounded-3 tile-image" src="/media/bluemugfade.jpg" alt="Pottery examples">
             <div class = "px-2">
             <h2>
                 Visit the shop
@@ -58,7 +58,7 @@
             
         </div>
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
-            <img class="img-fluid rounded-3 tile-image" src="/media/Stall.jpg" alt="Pottery examples">
+            <img class="img-fluid rounded-3 tile-image image-top-align" src="/media/dwarvesfire.JPG" alt="Pottery examples">
             <div class = "px-2">
             <h2>
                 Commissions
@@ -74,9 +74,9 @@
     </div>
     <div class="row h-100 justify-content-center bg-white">
         <div class="col-12 col-md-4 my-auto px-2">
-            <h1>
+            <h2>
                 Info
-            </h1>
+            </h2>
             <p>
                 Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
                 tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
