add bootstrap burger item for menu and styles

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -40,6 +40,10 @@ p {
     font-size: large;
 }
 
+.burger-icon{
+    font-size: 2rem;
+}
+
 .tile-image{
     max-height: 300px;
     min-width: 100%;
