create footer.html and add heading and address. add placeholder form element

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,8 +24,8 @@
     <div class="row h-100 justify-content-center px-2">
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <img class="img-fluid rounded-3 tile-image" src="/media/Stall.jpg" alt="Pottery examples">
-            <div class = "px-2">
-            <h2>
+            <div class = "px-2 pt-2">
+            <h2 class="text-center">
                 About 
             </h2>
             <p>
@@ -41,8 +41,8 @@
         </div>
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <img class="img-fluid rounded-3 tile-image" src="/media/bluemugfade.jpg" alt="Pottery examples">
-            <div class = "px-2">
-            <h2>
+            <div class = "px-2 pt-2">
+            <h2 class="text-center">
                 Visit the shop
             </h2>
             <p>
@@ -59,8 +59,8 @@
         </div>
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
             <img class="img-fluid rounded-3 tile-image image-top-align" src="/media/dwarvesfire.JPG" alt="Pottery examples">
-            <div class = "px-2">
-            <h2>
+            <div class = "px-2 pt-2">
+            <h2 class="text-center">
                 Commissions
             </h2>
             <p>
@@ -70,28 +70,6 @@
         <!-- </div> -->
         <!-- <div class="col-12 col-md-4 my-auto"> -->
             
-        </div>
-    </div>
-    <div class="row h-100 justify-content-center bg-white">
-        <div class="col-12 col-md-4 my-auto px-2">
-            <h2>
-                Info
-            </h2>
-            <p>
-                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
-                tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
-                the shop. You can also find out more about Helen's journey and craft on the About page.
-                <br>
-                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
-            </p>
-
-        </div>
-        <div class="col-12 col-md-4 my-auto px-2">
-            <p>
-                ifno
-                <br>
-                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
-            </p>
         </div>
     </div>
 </div>
