--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,8 @@
     {% block content %}
     {% endblock %}
     
+    {% include 'includes/footer.html' %}
+    
     {% block postloadjs %}
     {% endblock %}
   </body>
