add media queries for images

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="row h-100 justify-content-center px-2">
         <div class="col-12 col-md-4 col-xxl-3 pt-2">
-            <img class="img-fluid rounded-3 tile-image" src="/media/Stall.jpg" alt="Pottery examples">
+            <img class="img-fluid rounded-3 tile-image" src="/media/helenwheel2.jpeg" alt="Pottery examples">
             <div class = "px-2 pt-2">
             <h2 class="text-center">
                 About 
