--- a/static/css/base.css
+++ b/static/css/base.css
@@ -45,8 +45,16 @@ p {
 }
 
 .tile-image{
-    max-height: 300px;
+    max-height: 286px;
     height:60%;
+    min-width: 100%;
+    overflow:hidden;
+    object-fit: cover;
+}
+
+.shop-tile{
+    max-height: 286px;
+    height:auto;
     min-width: 100%;
     overflow:hidden;
     object-fit: cover;
@@ -54,6 +62,28 @@ p {
 
 .image-top-align {
     object-position: top;
+}
+
+.tile-overlay{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display:flex;
+    align-items: center;
+    justify-content:center;
+}
+
+.tile-title{
+    vertical-align: middle;
+    background-color: black;
+    opacity: 0.8;
+}
+
+.tile-title a{
+    text-decoration: none;
+    color:white;
 }
 
 
