--- a/products/templates/products/shop.html
+++ b/products/templates/products/shop.html
@@ -27,7 +27,7 @@
                 <img class="img-thumbnail" src="/media/all.jpg" class="card-img" alt="Lots of different pottery">
                 <div class="tile-overlay">
                     <div class="tile-title p-2">
-                        <a href="#">
+                        <a href="{% url 'all_products'%}?category=new">
                             <h6>New in stock</h6>
                         </a>
                     </div>
