--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -11,7 +11,7 @@
                     <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item my-auto">
-                    <a class="nav-link" href="#">Shop</a>
+                    <a class="nav-link" href="{% url 'shop' %}">Shop</a>
                 </li>
                 <li class="nav-item my-auto">
                     <a class="nav-link" href="#">About</a>
@@ -43,7 +43,7 @@
                                 {% if grand_total %}
                                 ${{ grand_total|floatformat:2 }}
                                 {% else %}
-                                $0.00
+                                £0.00
                                 {% endif %}
                             </p>
                         </div>
