--- a/templates/includes/header_landing.html
+++ b/templates/includes/header_landing.html
@@ -3,10 +3,10 @@
         <div class="col-6">
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#"><i class="bi bi-facebook"></i></a>
+                    <a class="nav-link text-white" href="https://www.facebook.com/people/Cowley-Pottery/100086994200228/" rel="noopener" target="_blank" aria-label="Go to our Facebook page (opens in a new tab)" ><i class="bi bi-facebook"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#"><i class="bi bi-instagram"></i></a>
+                    <a class="nav-link text-white" href="https://www.instagram.com/cowleypottery/" rel="noopener" target="_blank" aria-label="Go to our Instagram page (opens in a new tab)"><i class="bi bi-instagram"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'home' %}">Enter</i></a>
