fix footer margin

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="row h-100 justify-content-center bg-white">
+    <div class="row h-100 justify-content-center bg-white mx-0">
         <div class="col-12 col-md-4 my-auto px-2">
             <h2>
                 Cowley Pottery
