--- a/static/css/base.css
+++ b/static/css/base.css
@@ -105,3 +105,28 @@ footer li {
         height:50%;
     }
 }
+
+/* Category icons */
+
+.category-icons {
+    width:auto;
+    min-width: 7em;
+    font-family: "Chelsea Market", sans-serif;
+    /* color: black; */
+    font-size: large;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    border-radius: 0.25rem;
+    height: auto;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+    /* display: block; */
+}
+
+.category-icons a{
+
+    text-decoration: none;
+    color:black;
+}
+.category-icons a:hover{
+    color:#0d6efd;
+}
