--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -36,12 +36,12 @@
                 </li>
                 <li class="list-inline-item">
                     <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                        href="">
+                        href="{% url 'view_bag' %}">
                         <div class="text-center">
                             <div><i class="bi bi-bag"></i></div>
                             <p class="my-0">
                                 {% if grand_total %}
-                                ${{ grand_total|floatformat:2 }}
+                                £{{ grand_total|floatformat:2 }}
                                 {% else %}
                                 £0.00
                                 {% endif %}
