--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -41,7 +41,7 @@
                             <div><i class="bi bi-bag"></i></div>
                             <p class="my-0">
                                 {% if grand_total %}
-                                £{{ grand_total|floatformat:2 }}
+                                £{{ total|floatformat:2 }}
                                 {% else %}
                                 £0.00
                                 {% endif %}
