--- a/products/templates/products/view_product.html
+++ b/products/templates/products/view_product.html
@@ -11,20 +11,14 @@
             <h1>
                 {{product.name}}
             </h1>
-            <!-- <p>
-                Welcome to Cowley Pottery. In the heart of Devon, Helen crafts by hand all pieces from scratch in her
-                tiny little studio barely big enough for one person. If you'd like to see recent creations please visit
-                the shop. You can also find out more about Helen's journey and craft on the About page.
-                <br>
-                Feel free to get in contact about any pieces you want but are unavailable and I'll get back to you.
-            </p> -->
+            
 
         </div>
     </div>
     <div class="row h-100 justify-content-center px-2">
         
 
-        <div class="col-12 col-sm-6 col-md-4 col-xxl-3 pt-2 pb-2">
+        <div class="col-12 col-sm-6 col-md-4 pt-2 pb-2">
             <div class="card text-bg-dark  ratio-4x3">
                 <img class="img-thumbnail shop-tile rounded-3" src="/media/{{product.image }}" alt="{{product.name}} image">
             </div>
@@ -37,7 +31,33 @@
             <p>
                 £{{product.price}}
             </p>
+            <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                {% csrf_token %}
+                <div class="form-row">
+                    <div class="col-12">
+                        <p class="mt-3"><strong>Quantity:</strong></p>
+                        <div class="form-group w-50">
+                            <div class="input-group">
+                                <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="col-12">
+                        <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 mt-5">
+                            <span class="icon">
+                                <i class="fas fa-chevron-left"></i>
+                            </span>
+                            <span class="text-uppercase">Keep Shopping</span>
+                        </a>
+                        <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                    </div>
+                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                </div>
+            </form>
         </div>
+
+        
 
 
 
