--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -36,7 +36,7 @@
                                     <p class="my-0">{{ item.quantity }}</p>
                                 </td>
                                 <td class="py-3">
-                                    <p class="my-0">£{{item.product.price}}</p>
+                                    <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
                                 </td>
                             </tr>
                         {% endfor %}
