--- a/products/templates/products/view_product.html
+++ b/products/templates/products/view_product.html
@@ -11,16 +11,17 @@
             <h1>
                 {{product.name}}
             </h1>
-            
+
 
         </div>
     </div>
     <div class="row h-100 justify-content-center px-2">
-        
+
 
         <div class="col-12 col-sm-6 col-md-4 pt-2 pb-2">
             <div class="card text-bg-dark  ratio-4x3">
-                <img class="img-thumbnail shop-tile rounded-3" src="/media/{{product.image }}" alt="{{product.name}} image">
+                <img class="img-thumbnail shop-tile rounded-3" src="/media/{{product.image }}"
+                    alt="{{product.name}} image">
             </div>
 
         </div>
@@ -38,11 +39,32 @@
                         <p class="mt-3"><strong>Quantity:</strong></p>
                         <div class="form-group w-50">
                             <div class="input-group">
-                                <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                
+                                <div class="input-group-prepend">
+                                    <button class="decrement-qty btn btn-black" 
+                                        data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                        <span class="icon fs-2">
+                                            <i class="bi bi-patch-minus"></i>
+                                        </span>
+                                    </button>
+                                </div>
+
+                                <input class="form-control qty_input fs-4 rounded-3" type="number" name="quantity" value="1" min="1"
+                                    max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                            
+                                <div class="input-group-append">
+                                    <button class="increment-qty btn btn-black"
+                                        data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                        <span class="icon fs-2">
+                                            <i class="bi bi-patch-plus"></i>
+                                        </span>
+                                    </button>
+                                </div>
+                    
                             </div>
                         </div>
                     </div>
-    
+
                     <div class="col-12">
                         <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 mt-5">
                             <span class="icon">
@@ -57,7 +79,7 @@
             </form>
         </div>
 
-        
+
 
 
 
@@ -65,4 +87,8 @@
 
     </div>
 </div>
+{% endblock %}
+{% block postloadjs %}
+{{block.super}}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
