--- a/templates/base.html
+++ b/templates/base.html
@@ -2,36 +2,44 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    {% block meta %}
-        <meta http-equiv="X-UA-Compatible" contents="ie=edge">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% endblock %}
 
-    <!-- Bootstrap CSS -->
-    {% block corecss %}
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link href="{% static 'css/base.css' %}" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    {% endblock %}
+<head>
+  <!-- Required meta tags -->
+  {% block meta %}
+  <meta http-equiv="X-UA-Compatible" contents="ie=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% endblock %}
 
-    {% block corejs %}
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    {% endblock %}
+  <!-- Bootstrap CSS -->
+  {% block corecss %}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="{% static 'css/base.css' %}" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  {% endblock %}
 
-    <title>Cowley Pottery {% block extra_title %}{% endblock %}</title>
-  </head>
-  <body>
-    {% include 'includes/header.html' %}
+  {% block corejs %}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+  {% endblock %}
 
-    {% block content %}
-    {% endblock %}
-    
-    {% include 'includes/footer.html' %}
-    
-    {% block postloadjs %}
-    {% endblock %}
-  </body>
+  <title>Cowley Pottery {% block extra_title %}{% endblock %}</title>
+</head>
+
+<body>
+  {% include 'includes/header.html' %}
+
+  {% block content %}
+  {% endblock %}
+
+  {% include 'includes/footer.html' %}
+
+  {% block postloadjs %}
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  {% endblock %}
+</body>
+
 </html>
