--- a/products/templates/products/view_product.html
+++ b/products/templates/products/view_product.html
@@ -60,7 +60,9 @@
                                         </span>
                                     </button>
                                 </div>
-                    
+                                <p id="stock_qty_{{product.id}}" class="d-none">
+                                    {{product.stock}}
+                                </p>
                             </div>
                         </div>
                     </div>
