--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,19 +1,54 @@
-<script>
+<script type="text/javascript">
 
+   // Disable +/- buttons outside 1-99 range
+   function handleEnableDisable(itemId) {
+       var currentValue = parseInt($(`#id_qty_${itemId}`).val());
+    //    var stockValue = parseInt($(`#stock_qty_${itemId}`).text());
+    //     console.log(stockValue);
+       var minusDisabled = currentValue < 2;
+    //    var maxValue = parseInt($(`#stock_qty_${itemId}`).val());
+       
+    //    if (isNaN(maxValue)){
+    //     maxValue = $('#stock_qty').val();
 
-$('.increment-qty').click(function(e) {
-    console.log("working");
-   e.preventDefault();
-   var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-   var currentValue = parseInt($(closestInput).val());
-   $(closestInput).val(currentValue + 1);
-});
+    //    }
+    //    console.log(maxValue);
 
-// Decrement quantity
-$('.decrement-qty').click(function(e) {
-   e.preventDefault();
-   var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-   var currentValue = parseInt($(closestInput).val());
-   $(closestInput).val(currentValue - 1);
-});
+       var plusDisabled = currentValue > 10;
+       $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
+       $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
+   }
+
+   // Ensure proper enabling/disabling of all inputs on page load
+   var allQtyInputs = $('.qty_input');
+   for(var i = 0; i < allQtyInputs.length; i++){
+       var itemId = $(allQtyInputs[i]).data('item_id');
+       handleEnableDisable(itemId);
+   }
+
+   // Check enable/disable every time the input is changed
+   $('.qty_input').change(function() {
+       var itemId = $(this).data('item_id');
+       handleEnableDisable(itemId);
+   });
+
+   // Increment quantity
+   $('.increment-qty').click(function(e) {
+      e.preventDefault();
+      var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
+      var currentValue = parseInt($(closestInput).val());
+      $(closestInput).val(currentValue + 1);
+      var itemId = $(this).data('item_id');
+      handleEnableDisable(itemId);
+   });
+
+   // Decrement quantity
+   $('.decrement-qty').click(function(e) {
+      e.preventDefault();
+      var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
+      var currentValue = parseInt($(closestInput).val());
+      $(closestInput).val(currentValue - 1);
+      var itemId = $(this).data('item_id');
+      handleEnableDisable(itemId);
+   });
 </script>
