--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,19 +1,10 @@
 <script type="text/javascript">
 
-   // Disable +/- buttons outside 1-99 range
+   // Disable +/- buttons outside 1 - stock limit range
    function handleEnableDisable(itemId) {
        var currentValue = parseInt($(`#id_qty_${itemId}`).val());
        var stockValue = parseInt($(`#stock_qty_${itemId}`).text());
-    //     console.log(stockValue);
        var minusDisabled = currentValue < 2;
-    //    var maxValue = parseInt($(`#stock_qty_${itemId}`).val());
-       
-    //    if (isNaN(maxValue)){
-    //     maxValue = $('#stock_qty').val();
-
-    //    }
-    //    console.log(maxValue);
-
        var plusDisabled = currentValue >= stockValue ;
        $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
        $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
